# respeaker_ros

./: CMakeLists.txt  package.xml
msg/: DoaWithTime.msg
scripts/: respeaker_node.py  speech_to_text.py
